--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-        <link rel="stylesheet" type="text/css" media="screen" href="css/materialize.min.css" />
-        <link rel="stylesheet" type="text/css" media="screen" href="css/index.css" />
+        <link rel="stylesheet" type="text/css" media="screen" href="materialize.min.css" />
+        <link rel="stylesheet" type="text/css" media="screen" href="index.css" />
         <title>Form</title>
     </head>
     <body>
@@ -31,8 +31,7 @@
                 <a class="right" href="sign_up.html">New Customer?</a>
             </form>
         </section>
-        <script src="js/jquery.js"></script>
-        <script src="js/materialize.min.js"></script>
-        <script src="js/style.js"></script>
+        <script src="jquery.js"></script>
+        <script src="materialize.min.js"></script>
     </body>
 </html>
