--- a/sign_up.html
+++ b/sign_up.html
@@ -5,8 +5,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-        <link rel="stylesheet" type="text/css" media="screen" href="css/materialize.min.css" />
-        <link rel="stylesheet" type="text/css" media="screen" href="css/index.css" />
+        <link rel="stylesheet" type="text/css" media="screen" href="materialize.min.css" />
+        <link rel="stylesheet" type="text/css" media="screen" href="index.css" />
         <title>Form</title>
     </head>
     <body>
@@ -14,22 +14,22 @@
             <h4>Sign Up</h4>
             <form action="" onsubmit="log()" id="sub">
                 <div class="input-field">
-                    <!-- <i class="material-icons prefix">mail</i> -->
+                    <i class="material-icons prefix">mail</i>
                     <input id="email" type="email" class="validate" required>
                     <label for="email">Email</label>
                 </div>
                 <div class="input-field">
-                    <!-- <i class="material-icons prefix">account_circle</i> -->
+                    <i class="material-icons prefix">account_circle</i>
                     <input id="no" type="number" class="validate" required>
                     <label for="first_name">Mobile Number</label>
                 </div>
                 <div class="input-field">
-                        <!-- <i class="material-icons prefix">account_circle</i> -->
+                        <i class="material-icons prefix">account_circle</i>
                         <input id="first_name" type="text" class="validate" required>
                         <label for="first_name">Full Name</label>
                     </div>
                 <div class="input-field">
-                    <!-- <i class="material-icons prefix">person_pin</i> -->
+                    <i class="material-icons prefix">person_pin</i>
                     <input id="password" type="password" class="validate" required>
                     <label for="password">Create Password</label>
                 </div>
@@ -39,13 +39,7 @@
             </div>
         </form>
         </div>
-        <script src="js/jquery.js"></script>
-        <script src="js/materialize.min.js"></script>
-        <script src="js/style.js"></script>
-        <script>
-        $(document).ready(function(){
-            $('.sidenav').sidenav();
-            });
-        </script>
+        <script src="jquery.js"></script>
+        <script src="materialize.min.js"></script>
     </body>
 </html>
