--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
             <br><br>
             <form action="" onsubmit="log()" id="sub" class="">
                 <div class="input-field">
-                    <!-- <i class="material-icons prefix">mail</i> -->
+                    <i class="material-icons prefix">mail</i>
                     <input id="email" type="email" class="validate" required>
                     <label for="email">Email</label>
                 </div>
                 <div class="input-field">
-                    <!-- <i class="material-icons prefix">person_pin</i> -->
+                    <i class="material-icons prefix">person_pin_circle</i>
                     <input id="password" type="password" class="validate" required>
                     <label for="password">Password</label>
                 </div>
