--- a/sign_up.html
+++ b/sign_up.html
@@ -19,7 +19,7 @@
                     <label for="email">Email</label>
                 </div>
                 <div class="input-field">
-                    <i class="material-icons prefix">account_circle</i>
+                    <i class="material-icons prefix">phone</i>
                     <input id="no" type="number" class="validate" required>
                     <label for="first_name">Mobile Number</label>
                 </div>
@@ -29,7 +29,7 @@
                         <label for="first_name">Full Name</label>
                     </div>
                 <div class="input-field">
-                    <i class="material-icons prefix">person_pin</i>
+                    <i class="material-icons prefix">person_pin_circle</i>
                     <input id="password" type="password" class="validate" required>
                     <label for="password">Create Password</label>
                 </div>
