--- a/sign_up.html
+++ b/sign_up.html
@@ -35,7 +35,7 @@
                 </div>
                 <button class="right btn blue lighten-2" href="">SIGN UP</button>
                 <br><br><br><br>
-                <a href="sign_in.html" class="center-align">Already have an account? Sign in</a>
+                <a href="index.html" class="center-align">Already have an account? Sign in</a>
             </div>
         </form>
         </div>
