--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                     <label for="password">Password</label>
                 </div>
                 <br><br><br>
-                <button class="right btn blue lighten-2" href="">Sign In</button>
+                <button class="right btn blue lighten-2" href="verify.html">Sign In</button>
                 <br><br><br>
                 <a class="left" href="forgot.html">Forgot Password?</a>
                 <a class="right" href="sign_up.html">New Customer?</a>
